[package]
name = "advent-of-code-2023"
authors = ["Tymscar"]
version = "0.0.1"
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01/mod.rs"

[[bin]]
name = "day02"
path = "src/day02/mod.rs"

[[bin]]
name = "day03"
path = "src/day03/mod.rs"

[[bin]]
name = "day04"
path = "src/day04/mod.rs"

[[bin]]
name = "day05"
path = "src/day05/mod.rs"

[dependencies]
regex = "1.10.2"